fix section placement indicator's height not showing

--- a/app/css/_inspector.scss
+++ b/app/css/_inspector.scss
@@ -80,7 +80,7 @@
     float: none;
   }
 }
-.gu-transit.section-template{
+.gu-transit.section-template .template-handle{
   height: 10px;
 }
 .new-section .section-template{
